identity_errors_2.txt
cargo :     Checking 
zero-identity v1.0.0 (C
:\Users\Revanth\Downloa
ds\ZERO\zero-identity)
At line:1 char:1
+ cargo check -p 
zero-identity 
--offline 2>&1 | 
Out-File -FilePath 
iden ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (    Checking    
 ze...\zero-identit    
y):String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
warning: unused 
import: 
`ZeroKeypairPublic`
 --> zero-identity\src\
bundle.rs:5:28
  |
5 |     
keypair::{ZeroKeypair, 
ZeroKeypairPublic},
  |                    
        
^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
import: `zero_crypto::k
em::MlKem768EncapsKey`
  --> zero-identity\src
\bundle.rs:10:5
   |
10 | use zero_crypto::k
em::MlKem768EncapsKey;
   |     ^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^

warning: unused 
imports: 
`Ed25519SecretKey`, 
`MlKem768DecapsKey`, 
and `X25519SecretKey`
  --> zero-identity\src
\keypair.rs:10:42
   |
10 |     
dh::{X25519Keypair, 
X25519PublicKey, 
X25519SecretKey},
   |                   
                       
^^^^^^^^^^^^^^^
11 |     
hash::blake2b_256,
12 |     kem::{MlKem768
DecapsKey, 
MlKem768EncapsKey, 
MlKem768Keypair},
   |           
^^^^^^^^^^^^^^^^^
13 |     
sign::{Ed25519Keypair, 
Ed25519PublicKey, 
Ed25519SecretKey},
   |                   
                       
    ^^^^^^^^^^^^^^^^

warning: unused 
imports: 
`ZeroizeOnDrop` and 
`Zeroize`
  --> zero-identity\src
\keypair.rs:16:15
   |
16 | use 
zeroize::{Zeroize, 
ZeroizeOnDrop};
   |               
^^^^^^^  ^^^^^^^^^^^^^

error[E0277]: the 
trait bound `[u8; 74]: 
serde::Serialize` is 
not satisfied
    --> zero-identity\s
rc\zeroid.rs:44:38
     |
  44 | #[derive(Clone, 
PartialEq, Eq, Hash, 
Serialize, 
Deserialize)]
     |                 
                     
^^^^^^^^^ the trait 
`Serialize` is not 
implemented for `[u8; 
74]`
  45 | pub struct 
ZeroId {
  46 |     raw: [u8; 
RAW_SIZE],
     |     --- 
required by a bound 
introduced by this call
     |
     = note: for local 
types consider adding `
#[derive(serde::Seriali
ze)]` to your `[u8; 
74]` type
     = note: for types 
from other crates 
check whether the 
crate offers a `serde` 
feature flag
     = help: the 
following other types 
implement trait 
`Serialize`:
               [T; 0]
               [T]
               [T; 1]
               [T; 2]
               [T; 3]
               [T; 4]
               [T; 5]
               [T; 6]
             and 26 
others
note: required by a 
bound in `bundle::_::_s
erde::ser::SerializeStr
uct::serialize_field`
    --> C:\Users\Revant
h\.cargo\registry\src\i
ndex.crates.io-1949cf8c
6b5b557f\serde_core-1.0
.228\src\ser\mod.rs:191
7:21
     |
1915 |     fn serialize
_field<T>(&mut self, 
key: &'static str, 
value: &T) -> 
Result<(), Self::Error>
     |        
--------------- 
required by a bound in 
this associated 
function
1916 |     where
1917 |         T: 
?Sized + Serialize;
     |                 
    ^^^^^^^^^ required 
by this bound in `Seria
lizeStruct::serialize_f
ield`
     = note: this 
error originates in 
the derive macro 
`Serialize` (in 
Nightly builds, run 
with -Z 
macro-backtrace for 
more info)

error[E0277]: the 
trait bound `[u8; 74]: 
serde::Deserialize<'de>
` is not satisfied
    --> zero-identity\s
rc\zeroid.rs:46:10
     |
  46 |     raw: [u8; 
RAW_SIZE],
     |          
^^^^^^^^^^^^^^ the 
trait 
`Deserialize<'_>` is 
not implemented for 
`[u8; 74]`
     |
     = note: for local 
types consider adding `
#[derive(serde::Deseria
lize)]` to your `[u8; 
74]` type
     = note: for types 
from other crates 
check whether the 
crate offers a `serde` 
feature flag
     = help: the 
following other types 
implement trait 
`Deserialize<'de>`:
               &[u8]
               [T; 0]
               [T; 1]
               [T; 2]
               [T; 3]
               [T; 4]
               [T; 5]
               [T; 6]
             and 26 
others
note: required by a 
bound in `next_element`
    --> C:\Users\Revant
h\.cargo\registry\src\i
ndex.crates.io-1949cf8c
6b5b557f\serde_core-1.0
.228\src\de\mod.rs:1771
:12
     |
1769 |     fn 
next_element<T>(&mut 
self) -> 
Result<Option<T>, 
Self::Error>
     |        
------------ required 
by a bound in this 
associated function
1770 |     where
1771 |         T: 
Deserialize<'de>,
     |            
^^^^^^^^^^^^^^^^ 
required by this bound 
in `SeqAccess::next_ele
ment`

error[E0277]: the 
trait bound `[u8; 74]: 
serde::Deserialize<'de>
` is not satisfied
    --> zero-identity\s
rc\zeroid.rs:46:10
     |
  46 |     raw: [u8; 
RAW_SIZE],
     |          
^^^^^^^^^^^^^^ the 
trait 
`Deserialize<'_>` is 
not implemented for 
`[u8; 74]`
     |
     = note: for local 
types consider adding `
#[derive(serde::Deseria
lize)]` to your `[u8; 
74]` type
     = note: for types 
from other crates 
check whether the 
crate offers a `serde` 
feature flag
     = help: the 
following other types 
implement trait 
`Deserialize<'de>`:
               &[u8]
               [T; 0]
               [T; 1]
               [T; 2]
               [T; 3]
               [T; 4]
               [T; 5]
               [T; 6]
             and 26 
others
note: required by a 
bound in `next_value`
    --> C:\Users\Revant
h\.cargo\registry\src\i
ndex.crates.io-1949cf8c
6b5b557f\serde_core-1.0
.228\src\de\mod.rs:1916
:12
     |
1914 |     fn 
next_value<V>(&mut 
self) -> Result<V, 
Self::Error>
     |        
---------- required by 
a bound in this 
associated function
1915 |     where
1916 |         V: 
Deserialize<'de>,
     |            
^^^^^^^^^^^^^^^^ 
required by this bound 
in 
`MapAccess::next_value`

error[E0277]: the 
trait bound `[u8; 74]: 
serde::Deserialize<'de>
` is not satisfied
  --> zero-identity\src
\zeroid.rs:44:49
   |
44 | #[derive(Clone, 
PartialEq, Eq, Hash, 
Serialize, 
Deserialize)]
   |                   
                       
       ^^^^^^^^^^^ the 
trait 
`Deserialize<'_>` is 
not implemented for 
`[u8; 74]`
   |
   = note: for local 
types consider adding `
#[derive(serde::Deseria
lize)]` to your `[u8; 
74]` type
   = note: for types 
from other crates 
check whether the 
crate offers a `serde` 
feature flag
   = help: the 
following other types 
implement trait 
`Deserialize<'de>`:
             &[u8]
             [T; 0]
             [T; 1]
             [T; 2]
             [T; 3]
             [T; 4]
             [T; 5]
             [T; 6]
           and 26 
others
note: required by a 
bound in `bundle::_::_s
erde::__private228::de:
:missing_field`
  --> C:\Users\Revanth\
.cargo\registry\src\ind
ex.crates.io-1949cf8c6b
5b557f\serde-1.0.228\sr
c\private\de.rs:26:8
   |
24 | pub fn 
missing_field<'de, V, 
E>(field: &'static 
str) -> Result<V, E>
   |        
------------- required 
by a bound in this 
function
25 | where
26 |     V: 
Deserialize<'de>,
   |        
^^^^^^^^^^^^^^^^ 
required by this bound 
in `missing_field`
   = note: this error 
originates in the 
derive macro 
`Deserialize` (in 
Nightly builds, run 
with -Z 
macro-backtrace for 
more info)

For more information 
about this error, try 
`rustc --explain 
E0277`.
warning: 
`zero-identity` (lib) 
generated 4 warnings
error: could not 
compile 
`zero-identity` (lib) 
due to 4 previous 
errors; 4 warnings 
emitted
